src/objects/Apttus_Approver_Table__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <formula>User__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Former Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Apttus_Approver_Tables1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Hoc Approver</fullName>
                </value>
                <value>
                    <fullName>BL Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>BU / BL (Marketing) Manager</fullName>
                </value>
                <value>
                    <fullName>BU / BL Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>BU Controller</fullName>
                </value>
                <value>
                    <fullName>BU GM</fullName>
                </value>
                <value>
                    <fullName>BU Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>BU Quality Manager</fullName>
                </value>
                <value>
                    <fullName>BU SCM Manager</fullName>
                </value>
                <value>
                    <fullName>Channel Controller</fullName>
                </value>
                <value>
                    <fullName>Chief Purchasing Officer</fullName>
                </value>
                <value>
                    <fullName>Corporate Control</fullName>
                </value>
                <value>
                    <fullName>CTC</fullName>
                </value>
                <value>
                    <fullName>Customer Program Manager</fullName>
                </value>
                <value>
                    <fullName>Director Marketing</fullName>
                </value>
                <value>
                    <fullName>EM Controller</fullName>
                </value>
                <value>
                    <fullName>EMS Head</fullName>
                </value>
                <value>
                    <fullName>EM SVP</fullName>
                </value>
                <value>
                    <fullName>Global Sales &amp; Ops Manager</fullName>
                </value>
                <value>
                    <fullName>Global Pricing</fullName>
                </value>
                <value>
                    <fullName>GSM Controller</fullName>
                </value>
                <value>
                    <fullName>GSM Credit Control Manager</fullName>
                </value>
                <value>
                    <fullName>GSM Functional</fullName>
                </value>
                <value>
                    <fullName>GSM Global Disti GM</fullName>
                </value>
                <value>
                    <fullName>GSM Head</fullName>
                </value>
                <value>
                    <fullName>GSM Process &amp; Operations Manager</fullName>
                </value>
                <value>
                    <fullName>Head of General Purchasing</fullName>
                </value>
                <value>
                    <fullName>Head of Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Head of Sourcing</fullName>
                </value>
                <value>
                    <fullName>IP Department</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsNER__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Apttus_Approver_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Apttus Approver Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Approvers</fullName>
        <columns>Role__c</columns>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Approvers</label>
    </listViews>
    <listViews>
        <fullName>BU_Marketing_Manager</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Email__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>BU Marketing Manager</value>
        </filters>
        <label>BU Marketing Manager</label>
    </listViews>
    <listViews>
        <fullName>BU_Quality_Manager</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Email__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>BU Quality Manager</value>
        </filters>
        <label>BU Quality Manager</label>
    </listViews>
    <listViews>
        <fullName>BU_SCM_Mgr</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Key Account Manager</value>
        </filters>
        <label>BU SCM Mgr</label>
    </listViews>
    <listViews>
        <fullName>Channel_Conroller</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Email__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Channel Controller</value>
        </filters>
        <label>Channel Conroller</label>
    </listViews>
    <nameField>
        <label>Approver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apttus Approver Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>